# wasmtime-hs

./: .envrc  .gitignore  CHANGELOG.md  LICENSE  README.md  flake.nix  hie.yaml  wasmtime-hs.cabal  wasmtime.cabal
.github/workflows/: checks.yml
lib/: Wasmtime.hs  inlines.c
lib/Bindings/: Wasi.hsc  Wasm.hsc  Wasmtime.hsc
lib/Bindings/Wasmtime/: Config.hsc  Engine.hsc  Error.hsc  Extern.hsc  Func.hsc  Global.hsc  Instance.hsc  Linker.hsc  Memory.hsc  Module.hsc  Store.hsc  Table.hsc  Trap.hsc  Val.hsc
test/: Main.hs  c.wasm  c.wat  caller.hs  caller.wat  counter.hs  err.hs  fuel.hs  fuel.wat  gcd.hs  hello-world.hs  hello.hs  inc-st.hs  linker-hello.hs  memory.hs  memory_import.wat  memtest.hs  memtest.wat  segfault.c  wasi-hello.hs  wasi_hello.wat
