cabal-version:      3.0
name:               wasmtime
version:            0.0.0.0
synopsis:           Haskell bindings to the wasmtime WASM engine
homepage:           https://github.com/dfinity/wasmtime-hs
license:            BSD-2-Clause
license-file:       LICENSE
author:             Testing & Verification team at DFINITY
maintainer:         dept-testing_&_verification@dfinity.org
copyright:          DFINITY
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md
data-files:         test/*.wat

common warnings
    ghc-options: -Wall

library
    import:           warnings

    exposed-modules:  Wasmtime

    other-modules:    Bindings.Wasi
    other-modules:    Bindings.Wasm
    other-modules:    Bindings.Wasmtime
    other-modules:    Bindings.Wasmtime.Config
    other-modules:    Bindings.Wasmtime.Engine
    other-modules:    Bindings.Wasmtime.Error
    other-modules:    Bindings.Wasmtime.Extern
    other-modules:    Bindings.Wasmtime.Func
    other-modules:    Bindings.Wasmtime.Instance
    other-modules:    Bindings.Wasmtime.Module
    other-modules:    Bindings.Wasmtime.Store
    other-modules:    Bindings.Wasmtime.Trap
    other-modules:    Bindings.Wasmtime.Val
    other-modules:    Bindings.Wasmtime.Memory
    other-modules:    Bindings.Wasmtime.Table
    other-modules:    Bindings.Wasmtime.Global

    build-depends:    base >=4.15
    build-depends:    bindings-DSL >= 1.0.25
    build-depends:    bytestring >= 0.11.4
    build-depends:    primitive >= 0.7.3
    build-depends:    transformers >= 0.5.6
    build-depends:    vector >= 0.12.3
    build-depends:    wide-word >= 0.1.5
    build-depends:    tasty >= 1.4.3
    build-depends:    tasty-hunit >= 0.10.0

    default-language: Haskell2010

    hs-source-dirs:   lib
    c-sources:        lib/inlines.c

    extra-libraries:  wasmtime

test-suite inc-st
    import:           warnings
    type:             exitcode-stdio-1.0

    default-language: Haskell2010
    hs-source-dirs:   test
    main-is:          inc-st.hs
    other-modules:    Paths_wasmtime

    build-depends:    base >=4.15
    build-depends:    bytestring
    build-depends:    primitive
    build-depends:    wasmtime

test-suite hello
    import:           warnings
    type:             exitcode-stdio-1.0

    default-language: Haskell2010
    hs-source-dirs:   test
    main-is:          hello.hs
    other-modules:    Paths_wasmtime

    build-depends:    base >=4.15
    build-depends:    bytestring
    build-depends:    primitive
    build-depends:    wasmtime

test-suite gcd
    import:           warnings
    type:             exitcode-stdio-1.0

    default-language: Haskell2010
    hs-source-dirs:   test
    main-is:          gcd.hs
    other-modules:    Paths_wasmtime

    build-depends:    base >=4.15
    build-depends:    bytestring
    build-depends:    primitive
    build-depends:    wasmtime

test-suite memory
    import:           warnings
    type:             exitcode-stdio-1.0

    default-language: Haskell2010
    hs-source-dirs:   test
    main-is:          memory.hs
    other-modules:    Paths_wasmtime

    build-depends:    base >=4.15
    build-depends:    bytestring
    build-depends:    primitive
    build-depends:    wasmtime
    build-depends:    tasty >= 1.4.3
    build-depends:    tasty-hunit >= 0.10.0

test-suite fuel
    import:           warnings
    type:             exitcode-stdio-1.0

    default-language: Haskell2010
    hs-source-dirs:   test
    main-is:          fuel.hs
    other-modules:    Paths_wasmtime

    build-depends:    base >=4.15
    build-depends:    bytestring
    build-depends:    primitive
    build-depends:    wasmtime
    build-depends:    tasty >= 1.4.3
    build-depends:    tasty-hunit >= 0.10.0

executable segfault
  ghc-options: -rtsopts

  hs-source-dirs: test
  main-is: segfault.hs

  build-depends: base >=4.12 && <5

  extra-libraries: wasmtime
